[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/tac_cam.gd" type="Script" id=1]
[ext_resource path="res://audio/sound/zap.wav" type="AudioStream" id=2]
[ext_resource path="res://audio/sound/levelup_hit.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/sound/drop_reverse.wav" type="AudioStream" id=4]
[ext_resource path="res://addons/mixing-desk/sound/nonspatial/polysound.gd" type="Script" id=5]
[ext_resource path="res://audio/sound/unillama_attack.wav" type="AudioStream" id=6]

[node name="tac_cam" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.4, 0.4 )
limit_left = -1000000
limit_top = -1000000
limit_right = 1000000
limit_bottom = 1000000
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 7.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="pause_sound" type="Node" parent="."]
script = ExtResource( 5 )
volume_range = 3.0
pitch_range = 0.3

[node name="drop" type="AudioStreamPlayer" parent="pause_sound"]
stream = ExtResource( 3 )
volume_db = -5.0
pitch_scale = 3.0
bus = "UI"

[node name="zap" type="AudioStreamPlayer" parent="pause_sound"]
stream = ExtResource( 2 )
pitch_scale = 0.5
bus = "UI"

[node name="unpause_sound" type="Node" parent="."]
script = ExtResource( 5 )
volume_range = 3.0
pitch_range = 0.3

[node name="drop" type="AudioStreamPlayer" parent="unpause_sound"]
stream = ExtResource( 4 )
volume_db = -5.0
pitch_scale = 3.0
bus = "UI"

[node name="zap" type="AudioStreamPlayer" parent="unpause_sound"]
stream = ExtResource( 2 )
pitch_scale = 0.5
bus = "UI"

[node name="move_order" type="Node" parent="."]
script = ExtResource( 5 )
volume_range = 3.0
pitch_range = 0.2

[node name="zaphi" type="AudioStreamPlayer" parent="move_order"]
stream = ExtResource( 2 )
pitch_scale = 3.0
bus = "UI"

[node name="zaplo" type="AudioStreamPlayer" parent="move_order"]
stream = ExtResource( 2 )
pitch_scale = 0.4
bus = "UI"

[node name="hit" type="AudioStreamPlayer" parent="move_order"]
stream = ExtResource( 6 )
bus = "UI"

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="bit_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="update_resource_display"]
[connection signal="timeout" from="bit_timer" to="." method="_on_bit_timer_timeout"]
